# testing

./: .gitignore  CMakeLists.txt  ContratException.cpp  ContratException.h  Graphe.h  Graphe.hpp  Readme.md  Reseau.cpp  Reseau.h  Routeur.cpp  Routeur.h  TP4_client.py  TP4_server.py  main.cpp  trace.txt  traceFC.txt
equipe06/: nbactions.xml  pom.xml
equipe06/src/main/java/equipe06/: Main.java
equipe06/src/main/java/equipe06/Domaine/: CNC.java  Controleur.java  Coupe.java  CoupeAxe.java  CoupeBordure.java  CoupeDTO.java  CoupeL.java  CoupeRec.java  Outil.java  OutilDTO.java  Panneau.java  PanneauDTO.java  Repere.java
equipe06/src/main/java/equipe06/Domaine/Utils/: ElementCoupe.java  ZoneInterdite.java  ZoneInterditeDTO.java
equipe06/src/main/java/equipe06/drawing/: Afficheur.java  AfficheurHaut.java
equipe06/src/main/java/equipe06/gui/: MainWindow.form  MainWindow.java  PanneauVue.java
glo_server_data/fares/: Fri, 22 Nov 2024 13_36_18 +0000.json  pass
